[gd_scene load_steps=4 format=3 uid="uid://biy2b4g2oh4o6"]

[ext_resource type="Script" uid="uid://i16t6rcalcrg" path="res://tools/map_editor/add_tile_form.gd" id="1_du5dt"]
[ext_resource type="PackedScene" uid="uid://6g3m2aeikejd" path="res://tools/map_editor/texture_load_file_dialog.tscn" id="2_oivoo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_du5dt"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[node name="AddTileForm" type="PanelContainer"]
script = ExtResource("1_du5dt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add Tile"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="Type" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Type"

[node name="TypeOption" type="OptionButton" parent="MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Terrain"
popup/item_0/id = 0

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Name"

[node name="InputName" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "tile_name"
max_length = 18

[node name="TileTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer/GridContainer/TileTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_du5dt")

[node name="LoadImage" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Load Image"

[node name="Create" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Create"

[node name="FileDialog" parent="." instance=ExtResource("2_oivoo")]

[connection signal="item_selected" from="MarginContainer/VBoxContainer/VBoxContainer/GridContainer/TypeOption" to="." method="_on_type_option_item_selected"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/VBoxContainer/GridContainer/InputName" to="." method="_on_input_name_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/GridContainer/LoadImage" to="." method="_on_load_image_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Create" to="." method="_on_create_pressed"]
